2002-08-21  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-html-gtkhtml2.c (html_url_requested_cb): 
	- Don't use the full base-uri for resolving relative
	links. Instead use the path part of the base-uri. Fixes #91199

2002-08-20  Ross Burton  <ross@burtonini.com>
 
	* yelp.desktop.in: 
	- Fix the desktop file so that it validates correctly.
	
2002-08-16  Padraig O'Briain  <padraig.obriain@sun.com>

	* src/yelp-html-gtkhtml1.c
	* src/yelp-html-gtkhtml2.c
	* src/yelp-view-content.c
	* src/yelp-view-index.c
	* stylesheets/docbook/html/docdbook.xsl
	Remove reference to bgcolor being set to white (bug #89838)

2002-08-13  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0.3

	* configure.in: Bumped to 1.0.3

	* NEWS: Updated for 1.0.3

2002-08-13  Mikael Hallendal  <micke@codefactory.se>
 
	* src/yelp-man.c:
	(yelp_man_remove_duplicates_from_manpath): 
	- return a GSList instead
 	- Hopefully fixed #90385
	(yelp_man_init): using a GSList for manpathes instead of gchar **.
	
2002-08-07  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c: 
	- Removed the GNOME icon in the bottom
	- Removed the text in the bottom.
	- Removed the blue sidebar.

2002-08-07  Narayana Pattipati <narayana.pattipati@wipro.com>

	* src/yelp-reader.c (yelp_reader_start): Made changes to make yelp
          read the cached HTML files. Fixes #85258
	* src/yelp-pregenerate.c: new file. Creates yelp-pregenerate utility
          which pre-generates HTML files from XML files.
	* src/yelp-pregenerate.h: new file
	* src/yelp-reader.h: Added prototype for look_for_html_help_file

2002-08-05  Sander Vesik <sander.vesik@sun.com>
	* stylesheets/yelp-customization.xsl:
	- apply bold formating to guibuttons
	- apply mono formating to commands
	- fix left-margin instead of margin-left
	- relief from table formating quirks
	- leave space after inline media objects

2002-08-05  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0.2

	* NEWS: updated for 1.0.2

	* configure.in: 